Make sure the cookie dialog is shown behind the settings.

--- a/apps/dotcom/client/src/components/TlaLoggedOutCookieConsent.module.css
+++ b/apps/dotcom/client/src/components/TlaLoggedOutCookieConsent.module.css
@@ -3,6 +3,6 @@
 	bottom: 0;
 	left: 12px;
 	right: 0;
-	z-index: 1000;
+	z-index: var(--tl-layer-menus);
 	width: fit-content;
 }
